--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ tmp/
 #*.log
 .ssh*
 servers_info.yml
+0x11-what_happens_when_your_type_google_com_in_your_browser_and_press_enter/what-happens-when/
