--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 tmp/
 .vscode/
+__pycache__
 #*.log
 .ssh*
 servers_info.yml
+monitor_info.yml
 0x11-what_happens_when_your_type_google_com_in_your_browser_and_press_enter/what-happens-when/
